# NabhaVerse

./: .commitlintrc.yml  .env.example  .gitignore  .lintstagedrc.mjs  AGENTS.MD  CHANGELOG.md  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: branch-name.yml  ci.yml
apps/api/: .env.example  alembic.ini
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260708_0001_auth_identity.py  20260713_0002_character_domain.py  20260713_0003_world_domain.py
apps/api/src/nabhaverse_api/: main.py
apps/api/src/nabhaverse_api/infrastructure/: config.py
apps/api/tests/: conftest.py  helpers.py  test_app.py  test_auth_middleware.py  test_character_api.py  test_membership_api.py  test_migrations.py  test_rbac.py  test_repositories.py  test_services.py  test_world_api.py  test_world_domain_service.py
apps/web/: .env.example  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
apps/web/.storybook/: main.ts  preview.tsx
apps/web/.storybook/mocks/: next-link.tsx  next-navigation.ts
apps/web/src/: middleware.ts
apps/web/src/app/: layout.tsx  page.tsx  providers.tsx
apps/web/src/app/(app)/: layout.test.tsx  layout.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/components/ai/: ai-dashboard.stories.tsx  ai-dashboard.tsx  ai-navigation.tsx  ai-plugin-panels.tsx  ai-workspace-shell.test.tsx  ai-workspace-shell.tsx  index.ts  job-queue.stories.tsx  job-queue.tsx  model-card.stories.tsx  model-card.tsx  output-gallery.stories.tsx  output-gallery.tsx  prompt-card.stories.tsx  prompt-card.tsx  prompt-editor.stories.tsx  prompt-editor.tsx  prompt-library.stories.tsx  prompt-library.tsx  (+1 more)
apps/web/src/lib/: api.ts  clerkConfig.ts  workspace-state.tsx
apps/web/src/styles/: globals.css
apps/web/src/test/: mock-utils.ts  setup.tsx  test-utils.tsx
apps/workers/src/nabhaverse_workers/: celery_app.py
apps/workers/tests/: test_worker_app.py
docker/: api.Dockerfile  workers.Dockerfile
docs/: AI_AGENT_GUIDE.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_CONSTITUTION.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT_SETUP.md  ENGINEERING_GUIDE.md  FOLDER_STRUCTURE.md  PRD.md  README.md  ROADMAP.md  sprint-2-database-architecture.md
docs/architecture/: AI_ARCHITECTURE.md  BACKEND_ARCHITECTURE.md  BACKEND_PLATFORM_AUDIT.md  EXECUTIVE_SUMMARY.md  FRONTEND_ARCHITECTURE.md  SECURITY_ARCHITECTURE.md  STUDIO_SDK.md  SYSTEM_ARCHITECTURE.md  database.md
docs/backend/: API_REVIEW.md  BACKEND_AUDIT.md  BACKEND_PATTERNS.md  DATABASE_REVIEW.md  DOMAIN_GAP_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  SECURITY_REVIEW.md  TESTING_REVIEW.md
docs/sprints/: sprint-3-design-system.md
scripts/: dev-all.sh
scripts/tests/: foundation.test.mjs
(+394 files in other folders)
