[build-system]
requires = ["hatchling==1.30.1"]
build-backend = "hatchling.build"

[project]
name = "nabhaverse-foundation"
version = "0.1.0"
description = "Foundation services for the NabhaVerse monorepo."
readme = "docs/DEVELOPMENT_SETUP.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite==0.21.0",
  "alembic==1.16.5",
  "asyncpg==0.30.0",
  "celery==5.6.3",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "pydantic-settings==2.11.0",
  "pydantic==2.13.4",
  "python-jose[cryptography]==3.5.0",
  "redis==8.0.1",
  "sqlalchemy==2.0.51",
  "uvicorn==0.50.2",
]

[project.optional-dependencies]
dev = [
  "black==26.5.1",
  "mypy==2.1.0",
  "pytest==9.1.1",
  "ruff==0.15.20",
]

[tool.hatch.build.targets.wheel]
packages = [
  "apps/api/src/nabhaverse_api",
  "apps/workers/src/nabhaverse_workers",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["node_modules", ".next", "dist"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
exclude = '(^node_modules/|^dist/|^\.next/)'

[tool.pytest.ini_options]
pythonpath = ["apps/api/src", "apps/workers/src"]
testpaths = ["apps/api/tests", "apps/workers/tests"]

[[tool.mypy.overrides]]
module = ["celery"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jose", "jose.*", "alembic", "alembic.*"]
ignore_missing_imports = true
